Updated errors to comply with SignalFx error analyzer spec

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
+/vendor/
 /.bundle/
 /.yardoc
+/Gemfile.lock
 /_yardoc/
 /coverage/
 /doc/
 /pkg/
 /spec/reports/
 /tmp/
+
+# rspec failure tracking
+.rspec_status
